--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     <p>This site is for your all who want to know more info about the game you guys might have interest in.</p>
     <p>We All Love Games!</p>
     <p>Don't you?</p>
-    <img src="image/index/Kontroll.png" width="150" height="150">
+    <img id="g-pic" src="image/index/Kontroll.png" width="150" height="150">
     
     <form class="yes" action="shitty_video_ish/FUCK_YEA.html" method="get">
     	<input type="submit" value="Yes">
