--- a/index.html
+++ b/index.html
@@ -55,6 +55,14 @@
 	
 </section>
 
+<section class="widget">
+
+    <iframe id="calender" src="https://calendar.google.com/calendar/embed?height=500&amp;wkst=2&amp;bgcolor=%23999999&amp;src=atiwat.jampatong%40elev.cybergymnasiet.se&amp;color=%231B887A&amp;src=%23contacts%40group.v.calendar.google.com&amp;color=%2328754E&amp;src=sv.uk%23holiday%40group.v.calendar.google.com&amp;color=%23125A12&amp;src=sv.swedish%23holiday%40group.v.calendar.google.com&amp;color=%23125A12&amp;src=sv.th%23holiday%40group.v.calendar.google.com&amp;color=%23125A12&amp;src=sv.usa%23holiday%40group.v.calendar.google.com&amp;color=%23125A12&amp;src=e_2_sv%23weeknum%40group.v.calendar.google.com&amp;color=%238C500B&amp;ctz=Europe%2FStockholm"
+    style="border:solid 1px #777" width="617" height="500" frameborder="0" scrolling="no">
+    </iframe>
+
+</section>
+
     
 
 <script src="js/script.js"></script>
