--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
 
 <header>
-    <h1 class="title">E-GameCollect</h1>
+    <h1 class="title_game"><a class="title_game" href="index.html">E-GameCollect</a></h1>
 </header>
 
 
