--- a/tf2.html
+++ b/tf2.html
@@ -10,7 +10,7 @@
 <body>
 
 <header>
-    <h1>E-GameCollect</h1>
+    <h1 class="title_game"><a class="title_game" href="index.html">E-GameCollect</a></h1>
 </header>
 
 
