--- a/csgo.html
+++ b/csgo.html
@@ -42,7 +42,8 @@
 </nav>
 
 <!--_______________________________________________________________________________________________-->
-    
+ <div class="content_g">
+
     <section class="arrow">
     
    		<div class="arrow_l" onClick="changeigm(-1)">
@@ -89,7 +90,7 @@
 
 <!--_______________________________________________________________________________________________-->
 
-    <section class="content">
+    <section class="content_game">
 
         <h1>About Counter-Strike Global Offensive</h1>
 
@@ -99,6 +100,8 @@
         In addition, CS:GO introduces new gameplay modes, matchmaking, leader boards, and more." <h4>Counter-Strike Blog site</h4></p>
 
     </section>
+
+</div>   
 
 <script src="js/script.js"></script>
 
