--- a/gmod.html
+++ b/gmod.html
@@ -100,8 +100,10 @@
 
         <h1>About </h1>
 
-        <p>
-        <h4> Wikipedia</h4></p>
+        <p>Garry's Mod (commonly abbreviated as GMod) is a sandbox physics game created by Garry Newman[1] and developed by his company, Facepunch Studios.[2] Garry's Mod was originally a mod for Valve Corporation's Half-Life 2, but was later made into a standalone release in 2006 for Microsoft Windows, published by Valve Corporation. Later updates saw an OS X port, added in 2010, and a version for Linux in 2013.</p>
+        
+        <p>Garry's Mod (commonly abbreviated as GMod) is a sandbox physics game created by Garry Newman[1] and developed by his company, Facepunch Studios.[2] Garry's Mod was originally a mod for Valve Corporation's Half-Life 2, but was later made into a standalone release in 2006 for Microsoft Windows, published by Valve Corporation. Later updates saw an OS X port, added in 2010, and a version for Linux in 2013.
+        <h4>Garry's Mod Wikipedia</h4></p>
 
     </section>
 
